# batoo

./: .env.example  .gitignore  README.md  instructions.md  model_registry.yaml  pyproject.toml
configs/: defaults.yaml
instructions/: refactor.md
prompts/: cluer.json  cluer_candidates.json  cluer_repair.json  guesser.json  guesser_candidates.json  judge.json  judge_clue.json  judge_guess.json
prompts/fragments/: angle_enum.json  judge_reason_codes.json  output_contracts.json  wording.json
prompts/profiles/: compact_small.json  standard.json  strict_judge.json
prompts/roles/: cluer_base.json  guesser_base.json  judge_clue_base.json  judge_guess_base.json
scripts/: run_app.ps1
src/taboo_arena/: __init__.py  config.py
src/taboo_arena/analytics/: __init__.py  metrics.py
taboo_cards_en/: entertainment_and_pop_culture.json  everyday_life.json  food_and_drink.json  science_and_nature.json  technology_and_internet.json  travel_and_places.json
taboo_cards_en/misc/: README.txt  all_cards_flat.json  all_cards_grouped.json  manifest.json
tests/: conftest.py  test_analytics_metrics.py  test_app_main.py  test_app_state.py  test_cards_dataset.py  test_cluer_controller.py  test_console_trace.py  test_constraint_compiler.py  test_engine_and_logging.py  test_guess_matcher.py  test_judging.py  test_model_manager_runtime.py  test_models_registry.py  test_prompt_architecture.py  test_prompt_store.py  test_prompt_templates.py  test_refactor_acceptance.py  test_round_refactor.py  test_runtime_setup.py  test_transcript.py  test_transformers_backend_loading.py
(+48 files in other folders)
